compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__use___arity_1.snap
---
source: compiler-core/src/erlang/tests/use_.rs
assertion_line: 5
expression: "\npub fn main() {\n  use <- pair()\n  123\n}\n\nfn pair(f) {\n  let x = f()\n  #(x, x)\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 7).
-spec pair(fun(() -> L)) -> {L, L}.
pair(F) ->
    X = F(),
    {X, X}.

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> {integer(), integer()}.
main() ->
    pair(fun() -> 123 end).
