compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__use___arity_3.snap
---
source: compiler-core/src/erlang/tests/use_.rs
assertion_line: 39
expression: "\npub fn main() {\n  use <- trip(1.0, \"\")\n  123\n}\n\nfn trip(x, y, f) {\n  let z = f()\n  #(x, y, z)\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 7).
-spec trip(J, K, fun(() -> N)) -> {J, K, N}.
trip(X, Y, F) ->
    Z = F(),
    {X, Y, Z}.

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> {float(), binary(), integer()}.
main() ->
    trip(1.0, <<""/utf8>>, fun() -> 123 end).
