compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__use___no_callback_body.snap
---
source: compiler-core/src/erlang/tests/use_.rs
expression: "\npub fn main() {\n  let thingy = fn(f) { f() }\n  use <- thingy()\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let thingy = fn(f) { f() }
  use <- thingy()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    Thingy = fun(F) -> F() end,
    Thingy(fun() -> erlang:error(#{rakun_error => todo,
                    message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"main"/utf8>>,
                    line => 4}) end).
